# kokusho-observatory

./: .gitignore  README.md
.github/workflows/: deploy.yml
docs/: DESIGN.md
ingest/: FINDINGS.md  bootstrap.py  build_daily.py  build_data.py  build_dates.py  build_geo.py  build_stations_all.py  build_views.py  fetch_obsdl_sample.py  fetch_rankall.py  fetch_realtime.py  fetch_stations.py  hf_store.py  pyproject.toml  requirements.txt
ingest/samples/: daily_max_tokyo_sample.csv  element_daily.html  etrn_pref44.html  kiyaku.html  nozawa_check.json  obsdl_index.html  period_daily.html  preview_response.json  rank_daily_index.html  rank_s_ogouchi.html  rank_s_oshima.html  rankall_all_elements.csv  rankall_utf8.html  station_pd00.html  station_pd44.html  station_pd48.html  stations_full_japan.csv  tokyo_full_history_sample.csv  tokyo_parsed_sample.csv  top.2.1.js
mockup/: artifact.html  index.html
web/: index.html  package-lock.json  package.json  verify.mjs  verify_live.mjs  vite.config.ts
web/public/: japan.geojson  stations.parquet
web/scripts/: copy-data.mjs
web/src/: Shell.tsx  db.ts  lib.tsx  main.tsx  rankings.ts  styles.css  types.ts
web/src/pages/: DatePage.tsx  Home.tsx  MapPage.tsx  Rankings.tsx  Spike.tsx  StationPage.tsx  StationsList.tsx
