[project]
name = "maxtemp-ingest"
version = "0.1.0"
description = "気象庁の最高気温データ取込パイプライン（歴代ランキング / 地点マスタ / obsdl 日別値）"
readme = "FINDINGS.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "shapely>=2.1.2",
]

[tool.uv]
package = false
